# jax-optimization-tutorial

./: .gitignore  README.md  pyproject.toml
jax_optimization_tutorial/: basic-optimization.ipynb  linear-regression.ipynb
