[tool.poetry]
name = "jax-optimization-tutorial"
version = "0.1.0"
description = ""
authors = ["Gustaf Rydholm <gustaf.rydholm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.3.4"
jupyter = "^1.0.0"
jaxlib = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
